--- a/src/header.css
+++ b/src/header.css
@@ -1,5 +1,8 @@
 h1 {
     background: red;
     color: yellow;
-    padding: 0px;
+    margin: 0px;
+    text-align: center;
+    padding: 10px;
+    width: 2394px;
 }
