--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,33 @@
   padding: 0;
 }
 
+.App {
+  min-height: 100vh;
+  /* background-image: linear-gradient(45deg, #ff9a9e 0%, #fad0c4 99%, #fad0c4 100%); */
+  background-image: linear-gradient(to top, #a18cd1 0%, #fbc2eb 100%);
+
+}
+
+.search-form {
+  min-height: 10vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.search-bar {
+  width: 50%;
+  border: none;
+  padding: 10px;
+}
+
+.search-button {
+  background: lightcoral;
+  border: none;
+  padding: 10px 20px;
+  color: white;
+}
+
 body {
   font-family: Arial, Helvetica, sans-serif;
   line-height: 1.4;
@@ -16,6 +43,13 @@ a {
 
 .container {
   padding: 0 1rem;
+}
+
+.recipes {
+  display: flex;
+  justify-content: space-around;
+  flex-wrap: wrap;
+  background-color: white;
 }
 
 .btn {
